<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.addrecipe.AddRecipeActivity">

    <include
        android:id="@+id/include"
        layout="@layout/app_title_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintTop_toBottomOf="@+id/include"
        app:layout_constraintVertical_bias="0.0"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/catTextView"
                style="@style/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:text="@string/cat"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/catSpinner"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginEnd="16dp"
                android:spinnerMode="dropdown"
                android:clickable="true"
                app:backgroundTint="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="@+id/catTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/catTextView" />

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/recipe_name"
                app:layout_constraintBottom_toBottomOf="@+id/nameEditText"
                app:layout_constraintEnd_toStartOf="@+id/nameEditText"
                app:layout_constraintStart_toStartOf="@+id/catTextView"
                app:layout_constraintTop_toTopOf="@+id/nameEditText"
                style="@style/textView"/>

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/catSpinner"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/catSpinner"
                style="@style/editText"/>

            <TextView
                android:id="@+id/ingredientTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/ingredient"
                app:layout_constraintBottom_toBottomOf="@+id/ingredientEditText"
                app:layout_constraintEnd_toStartOf="@+id/ingredientEditText"
                app:layout_constraintStart_toStartOf="@+id/nameTextView"
                app:layout_constraintTop_toTopOf="@+id/ingredientEditText"
                style="@style/textView"/>

            <EditText
                android:id="@+id/ingredientEditText"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:maxLines="5"
                android:singleLine="false"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="@+id/nameEditText"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/nameEditText"
                style="@style/editText"
                android:background="@color/colorBackground"/>

            <TextView
                android:id="@+id/durationTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/cooking_time"
                app:layout_constraintBottom_toBottomOf="@+id/durationEditText"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="@+id/ingredientTextView"
                app:layout_constraintTop_toTopOf="@+id/durationEditText"
                style="@style/textView"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.35" />

            <EditText
                android:id="@+id/durationEditText"
                style="@style/editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/recipe_duration_hint"
                android:inputType="numberSigned"
                app:layout_constraintEnd_toStartOf="@+id/textView2"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/ingredientEditText" />

            <TextView
                android:id="@+id/stepsTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/steps"
                app:layout_constraintBottom_toBottomOf="@+id/stepsEditText"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="@+id/durationTextView"
                app:layout_constraintTop_toBottomOf="@+id/durationEditText"
                style="@style/textView"/>

            <EditText
                android:id="@+id/stepsEditText"
                style="@style/editText"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/colorBackground"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/steps_hint"
                android:inputType="textMultiLine"
                android:maxLines="10"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/durationEditText" />

            <TextView
                android:id="@+id/imageTextView"
                style="@style/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/image"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="@+id/stepsTextView"
                app:layout_constraintTop_toBottomOf="@+id/stepsEditText" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:scaleType="centerCrop"
                android:clickable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/stepsEditText"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/stepsEditText"
                app:srcCompat="@drawable/ic_camera_white_48dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/min"
                style="@style/textView"
                app:layout_constraintBottom_toBottomOf="@+id/durationEditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/durationEditText" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height"
        android:layout_marginBottom="16dp"
        android:background="@drawable/round_btn"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/save_btn"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>